# sslstrip

./: README.md  pyproject.toml  requirements.txt  reset_network.sh  setup.py  sslstrip.py
.github/workflows/: codeql-analysis.yml
sslstrip/: ClientRequest.py  CookieCleaner.py  DnsCache.py  SSLServerConnection.py  ServerConnection.py  ServerConnectionFactory.py  StrippingProxy.py  URLMonitor.py
